--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
+    "dotenv": "^16.5.0",
     "google-map-react": "^2.2.1",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
